# bone-segmentation

./: README.md
src/proposed-method/: README
src/proposed-method/src/: 01-Preprocessing.hpp  02-Segmentation.hpp  03-AdjacentBoneSeparation.hpp  CMakeLists.txt  Globals.hpp  ImageSplitter.hpp  Main.cxx
src/proposed-method/src/external-libs-src/maxflow-v3.01/: CMakeLists.txt  graph.cpp  graph.h  instances.inc
src/proposed-method/src/filters/: ChamferDistanceTransform.hpp  GraphCut.hpp  SheetnessMeasure.hpp
src/proposed-method/src/utils/: FilterUtils.hpp  ImageUtils.hpp
